product_docs/docs/pgd/6.5/reference/tables-views-functions/index.mdx
---
# edit index.mdx.src DO NOT edit index.mdx or index.json 
title: "Tables, views and functions reference"
navTitle: "Tables, views and functions"
description: "The complete reference to all tables, views, functions, views, and commands available in EDB Postgres Distributed."
indexCards: none
navigation:
- catalogs-visible
- functions
- monitoring-metrics
- pgd-settings
- nodes
- nodes-management-interfaces
- routing
- commit-scopes
- conflicts
- conflict_functions
- repsets-management
- repsets-membership
- repsets-ddl-filtering
- testingandtuning
- sequences
- large-objects
- autopartition
- streamtriggers
- catalogs-internal
- functions-internal
- conflict_functions
- clcd
- conflicts
---

The reference section is a definitive listing of all functions, views, and commands available in EDB Postgres Distributed.



## [User visible catalogs and views](catalogs-visible)
 * [`bdr.analytics_sync_position`](catalogs-visible#bdranalytics_sync_position)
 * [`bdr.camo_decision_journal`](catalogs-visible#bdrcamo_decision_journal)
 * [`bdr.commit_decisions`](catalogs-visible#bdrcommit_decisions)
 * [`bdr.commit_scopes`](catalogs-visible#bdrcommit_scopes)
 * [`bdr.conflict_history`](catalogs-visible#bdrconflict_history)
 * [`bdr.conflict_history_summary`](catalogs-visible#bdrconflict_history_summary)
 * [`bdr.consensus_kv_data`](catalogs-visible#bdrconsensus_kv_data)
 * [`bdr.crdt_handlers`](catalogs-visible#bdrcrdt_handlers)
 * [`bdr.ddl_replication`](catalogs-visible#bdrddl_replication)
 * [`bdr.depend`](catalogs-visible#bdrdepend)
 * [`bdr.failover_replication_slots`](catalogs-visible#bdrfailover_replication_slots)
 * [`bdr.global_consensus_journal`](catalogs-visible#bdrglobal_consensus_journal)
 * [`bdr.global_consensus_journal_details`](catalogs-visible#bdrglobal_consensus_journal_details)
 * [`bdr.global_consensus_response_journal`](catalogs-visible#bdrglobal_consensus_response_journal)
 * [`bdr.global_lock`](catalogs-visible#bdrglobal_lock)
 * [`bdr.global_locks`](catalogs-visible#bdrglobal_locks)
 * [`bdr.group_camo_details`](catalogs-visible#bdrgroup_camo_details)
 * [`bdr.group_lease`](catalogs-visible#bdrgroup_lease)
 * [`bdr.group_raft_details`](catalogs-visible#bdrgroup_raft_details)
 * [`bdr.group_replslots_details`](catalogs-visible#bdrgroup_replslots_details)
 * [`bdr.group_subscription_summary`](catalogs-visible#bdrgroup_subscription_summary)
 * [`bdr.group_versions_details`](catalogs-visible#bdrgroup_versions_details)
 * [`bdr.leader`](catalogs-visible#bdrleader)
 * [`bdr.local_consensus_snapshot`](catalogs-visible#bdrlocal_consensus_snapshot)
 * [`bdr.local_consensus_state`](catalogs-visible#bdrlocal_consensus_state)
 * [`bdr.local_node`](catalogs-visible#bdrlocal_node)
 * [`bdr.local_node_summary`](catalogs-visible#bdrlocal_node_summary)
 * [`bdr.local_sync_status`](catalogs-visible#bdrlocal_sync_status)
 * [`bdr.node`](catalogs-visible#bdrnode)
 * [`bdr.node_catchup_info`](catalogs-visible#bdrnode_catchup_info)
 * [`bdr.node_catchup_info_details`](catalogs-visible#bdrnode_catchup_info_details)
 * [`bdr.node_conflict_resolvers`](catalogs-visible#bdrnode_conflict_resolvers)
 * [`bdr.node_group`](catalogs-visible#bdrnode_group)
 * [`bdr.node_group_replication_sets`](catalogs-visible#bdrnode_group_replication_sets)
 * [`bdr.node_group_summary`](catalogs-visible#bdrnode_group_summary)
 * [`bdr.node_local_info`](catalogs-visible#bdrnode_local_info)
 * [`bdr.node_log_config`](catalogs-visible#bdrnode_log_config)
 * [`bdr.node_peer_progress`](catalogs-visible#bdrnode_peer_progress)
 * [`bdr.node_replication_rates`](catalogs-visible#bdrnode_replication_rates)
 * [`bdr.node_slots`](catalogs-visible#bdrnode_slots)
 * [`bdr.node_summary`](catalogs-visible#bdrnode_summary)
 * [`bdr.parted_origin_catchup_info`](catalogs-visible#bdrparted_origin_catchup_info)
 * [`bdr.parted_origin_catchup_info_details`](catalogs-visible#bdrparted_origin_catchup_info_details)
 * [`bdr.pending_failed_changes`](catalogs-visible#bdrpending_failed_changes)
 * [`bdr.pending_failed_changes_sql`](catalogs-visible#bdrpending_failed_changes_sql)
 * [`bdr.pgd_largeobject`](catalogs-visible#bdrpgd_largeobject)
 * [`bdr.pgd_largeobject_metadata`](catalogs-visible#bdrpgd_largeobject_metadata)
 * [`bdr.queue`](catalogs-visible#bdrqueue)
 * [`bdr.replication_set`](catalogs-visible#bdrreplication_set)
 * [`bdr.replication_set_table`](catalogs-visible#bdrreplication_set_table)
 * [`bdr.replication_set_ddl`](catalogs-visible#bdrreplication_set_ddl)
 * [`bdr.replication_sets`](catalogs-visible#bdrreplication_sets)
 * [`bdr.resolved_transactions`](catalogs-visible#bdrresolved_transactions)
 * [`bdr.resolved_transactions_info`](catalogs-visible#bdrresolved_transactions_info)
 * [`bdr.schema_changes`](catalogs-visible#bdrschema_changes)
 * [`bdr.sequence_alloc`](catalogs-visible#bdrsequence_alloc)
 * [`bdr.sequences`](catalogs-visible#bdrsequences)
 * [`bdr.stat_activity`](catalogs-visible#bdrstat_activity)
 * [`bdr.stat_commit_scope`](catalogs-visible#bdrstat_commit_scope)
 * [`bdr.stat_commit_scope_state`](catalogs-visible#bdrstat_commit_scope_state)
 * [`bdr.stat_connection_manager`](catalogs-visible#bdrstat_connection_manager)
 * [`bdr.stat_connection_manager_connections`](catalogs-visible#bdrstat_connection_manager_connections)
 * [`bdr.stat_connection_manager_node_stats`](catalogs-visible#bdrstat_connection_manager_node_stats)
 * [`bdr.stat_connection_manager_hba_file_rules`](catalogs-visible#bdrstat_connection_manager_hba_file_rules)
 * [`bdr.stat_raft_followers_state`](catalogs-visible#bdrstat_raft_followers_state)
 * [`bdr.stat_raft_state`](catalogs-visible#bdrstat_raft_state)
 * [`bdr.stat_receiver`](catalogs-visible#bdrstat_receiver)
 * [`bdr.stat_receiver_transactions`](catalogs-visible#bdrstat_receiver_transactions)
 * [`bdr.stat_reconcile_commit_scope`](catalogs-visible#bdrstat_reconcile_commit_scope)
 * [`bdr.stat_relation`](catalogs-visible#bdrstat_relation)
 * [`bdr.stat_routing_candidate_state`](catalogs-visible#bdrstat_routing_candidate_state)
 * [`bdr.stat_routing_state`](catalogs-visible#bdrstat_routing_state)
 * [`bdr.stat_subscription`](catalogs-visible#bdrstat_subscription)
 * [`bdr.stat_worker`](catalogs-visible#bdrstat_worker)
 * [`bdr.stat_writer`](catalogs-visible#bdrstat_writer)
 * [`bdr.subscription`](catalogs-visible#bdrsubscription)
 * [`bdr.subscription_summary`](catalogs-visible#bdrsubscription_summary)
 * [`bdr.subscription_error_status`](catalogs-visible#bdrsubscription_error_status)
 * [`bdr.tables`](catalogs-visible#bdrtables)
 * [`bdr.taskmgr_work_queue`](catalogs-visible#bdrtaskmgr_work_queue)
 * [`bdr.taskmgr_workitem_status`](catalogs-visible#bdrtaskmgr_workitem_status)
 * [`bdr.taskmgr_local_work_queue`](catalogs-visible#bdrtaskmgr_local_work_queue)
 * [`bdr.taskmgr_local_workitem_status`](catalogs-visible#bdrtaskmgr_local_workitem_status)
 * [`bdr.trigger`](catalogs-visible#bdrtrigger)
 * [`bdr.triggers`](catalogs-visible#bdrtriggers)
 * [`bdr.workers`](catalogs-visible#bdrworkers)
 * [`bdr.writers`](catalogs-visible#bdrwriters)
 * [`bdr.worker_tasks`](catalogs-visible#bdrworker_tasks)


## [System functions](functions)
### [Version information functions](functions#version-information-functions)
 * [`bdr.bdr_version`](functions#bdrbdr_version)
 * [`bdr.bdr_version_num`](functions#bdrbdr_version_num)
### [System information functions](functions#system-information-functions)
 * [`bdr.get_relation_stats`](functions#bdrget_relation_stats)
 * [`bdr.get_subscription_stats`](functions#bdrget_subscription_stats)
### [System and progress information parameters](functions#system-and-progress-information-parameters)
 * [`bdr.local_node_id`](functions#bdrlocal_node_id)
 * [`bdr.last_committed_lsn`](functions#bdrlast_committed_lsn)
 * [`transaction_id`](functions#transaction_id)
### [Node status functions](functions#node-status-functions)
 * [`bdr.is_node_connected`](functions#bdris_node_connected)
 * [`bdr.is_node_ready`](functions#bdris_node_ready)
### [Consensus function](functions#consensus-function)
 * [`bdr.consensus_disable`](functions#bdrconsensus_disable)
 * [`bdr.consensus_enable`](functions#bdrconsensus_enable)
 * [`bdr.consensus_proto_version`](functions#bdrconsensus_proto_version)
 * [`bdr.consensus_snapshot_export`](functions#bdrconsensus_snapshot_export)
 * [`bdr.consensus_snapshot_import`](functions#bdrconsensus_snapshot_import)
 * [`bdr.consensus_snapshot_verify`](functions#bdrconsensus_snapshot_verify)
 * [`bdr.get_consensus_status`](functions#bdrget_consensus_status)
 * [`bdr.get_raft_status`](functions#bdrget_raft_status)
 * [`bdr.raft_leadership_transfer`](functions#bdrraft_leadership_transfer)
### [Utility functions](functions#utility-functions)
 * [`bdr.transfer_all_leaderships`](functions#bdrtransfer_all_leaderships)
 * [`bdr.alter_node_kind`](functions#bdralter_node_kind)
 * [`bdr.alter_subscription_skip_changes_upto`](functions#bdralter_subscription_skip_changes_upto)
 * [`bdr.connection_manager_refresh_pools`](functions#bdrconnection_manager_refresh_pools)
 * [`bdr.get_node_sub_apply_lsn`](functions#bdrget_node_sub_apply_lsn)
 * [`bdr.get_node_sub_receive_lsn`](functions#bdrget_node_sub_receive_lsn)
 * [`bdr.global_lock_table`](functions#bdrglobal_lock_table)
 * [`bdr.group_lease_override`](functions#bdrgroup_lease_override)
 * [`bdr.local_group_slot_name`](functions#bdrlocal_group_slot_name)
 * [`bdr.node_group_type`](functions#bdrnode_group_type)
 * [`bdr.replicate_ddl_command`](functions#bdrreplicate_ddl_command)
 * [`bdr.run_on_all_nodes`](functions#bdrrun_on_all_nodes)
 * [`bdr.run_on_group`](functions#bdrrun_on_group)
 * [`bdr.run_on_nodes`](functions#bdrrun_on_nodes)
 * [`bdr.stat_reset`](functions#bdrstat_reset)
 * [`bdr.wait_for_apply_queue`](functions#bdrwait_for_apply_queue)
 * [`bdr.wait_for_xid_progress`](functions#bdrwait_for_xid_progress)
 * [`bdr.wait_node_confirm_lsn`](functions#bdrwait_node_confirm_lsn)
 * [`bdr.wait_slot_confirm_lsn`](functions#bdrwait_slot_confirm_lsn)
### [Global advisory locks](functions#global-advisory-locks)
 * [`bdr.global_advisory_lock`](functions#bdrglobal_advisory_lock)
 * [`bdr.global_advisory_unlock`](functions#bdrglobal_advisory_unlock)
### [Monitoring functions](functions#monitoring-functions)
 * [`bdr.monitor_group_versions`](functions#bdrmonitor_group_versions)
 * [`bdr.monitor_group_raft`](functions#bdrmonitor_group_raft)
 * [`bdr.monitor_local_replslots`](functions#bdrmonitor_local_replslots)
 * [`bdr.ts_metrics`](functions#bdrts_metrics)
 * [`bdr.ts_latest`](functions#bdrts_latest)
 * [`bdr.ts_errors`](functions#bdrts_errors)
 * [`bdr.ts_samples`](functions#bdrts_samples)
 * [`bdr.ts_histogram`](functions#bdrts_histogram)
 * [`bdr.ts_histogram_distribution`](functions#bdrts_histogram_distribution)
 * [`bdr.ts_histogram_cumulative`](functions#bdrts_histogram_cumulative)
 * [`bdr.wal_sender_stats`](functions#bdrwal_sender_stats)
 * [`bdr.get_decoding_worker_stat`](functions#bdrget_decoding_worker_stat)
 * [`bdr.lag_control`](functions#bdrlag_control)
### [Routing functions](functions#routing-functions)
 * [`bdr.routing_leadership_transfer`](functions#bdrrouting_leadership_transfer)
### [CAMO functions](functions#camo-functions)
 * [`bdr.is_camo_partner_connected`](functions#bdris_camo_partner_connected)
 * [`bdr.is_camo_partner_ready`](functions#bdris_camo_partner_ready)
 * [`bdr.get_configured_camo_partner`](functions#bdrget_configured_camo_partner)
 * [`bdr.wait_for_camo_partner_queue`](functions#bdrwait_for_camo_partner_queue)
 * [`bdr.camo_transactions_resolved`](functions#bdrcamo_transactions_resolved)
 * [`bdr.logical_transaction_status`](functions#bdrlogical_transaction_status)
### [Commit Scope functions](functions#commit-scope-functions)
 * [`bdr.add_commit_scope`](functions#bdradd_commit_scope)
 * [`bdr.create_commit_scope`](functions#bdrcreate_commit_scope)
 * [`bdr.alter_commit_scope`](functions#bdralter_commit_scope)
 * [`bdr.drop_commit_scope`](functions#bdrdrop_commit_scope)
 * [`bdr.remove_commit_scope`](functions#bdrremove_commit_scope)
### [Apply error policy functions](functions#apply-error-policy-functions)
 * [`bdr.skip_failed_change`](functions#bdrskip_failed_change)
 * [`bdr.skip_failed_transaction`](functions#bdrskip_failed_transaction)
 * [`bdr.apply_failed_change`](functions#bdrapply_failed_change)
 * [`bdr.apply_failed_transaction`](functions#bdrapply_failed_transaction)
 * [`bdr.modify_failed_change`](functions#bdrmodify_failed_change)
 * [`bdr.reconstruct_change_sql`](functions#bdrreconstruct_change_sql)
 * [`bdr.reconstruct_failed_transaction`](functions#bdrreconstruct_failed_transaction)
 * [`bdr.resolve_failed_transaction`](functions#bdrresolve_failed_transaction)
 * [`bdr.analyze_skip_impact`](functions#bdranalyze_skip_impact)
 * [`bdr.analyze_transaction_skip_impact`](functions#bdranalyze_transaction_skip_impact)
 * [`bdr.format_skip_analysis`](functions#bdrformat_skip_analysis)
 * [`bdr.alter_subscription_reset_error_counters`](functions#bdralter_subscription_reset_error_counters)


## [Monitoring metrics reference](monitoring-metrics)
 * [PGD timeseries metrics](monitoring-metrics#pgd-timeseries-metrics)
   * [Commit latency histogram](monitoring-metrics#commit-latency-histogram)
 * [Cluster state metrics](monitoring-metrics#cluster-state-metrics)
 * [Commit scope counters](monitoring-metrics#commit-scope-counters)
 * [Postgres statistics metrics](monitoring-metrics#postgres-statistics-metrics)
   * [Per database](monitoring-metrics#per-database)
   * [Non-PGD replication slots](monitoring-metrics#non-pgd-replication-slots)
   * [Instance-wide metrics](monitoring-metrics#instance-wide-metrics)
   * [Activity and locks](monitoring-metrics#activity-and-locks)


## [PGD settings](pgd-settings)
### [Conflict handling](pgd-settings#conflict-handling)
 * [`bdr.default_conflict_detection`](pgd-settings#bdrdefault_conflict_detection)
### [Global sequence parameters](pgd-settings#global-sequence-parameters)
 * [`bdr.default_sequence_kind`](pgd-settings#bdrdefault_sequence_kind)
### [DDL handling](pgd-settings#ddl-handling)
 * [`bdr.default_replica_identity`](pgd-settings#bdrdefault_replica_identity)
 * [`bdr.ddl_replication`](pgd-settings#bdrddl_replication)
 * [`bdr.role_replication`](pgd-settings#bdrrole_replication)
 * [`bdr.ddl_locking`](pgd-settings#bdrddl_locking)
 * [`bdr.truncate_locking`](pgd-settings#bdrtruncate_locking)
### [Global locking](pgd-settings#global-locking)
 * [`bdr.global_lock_max_locks`](pgd-settings#bdrglobal_lock_max_locks)
 * [`bdr.global_lock_timeout`](pgd-settings#bdrglobal_lock_timeout)
 * [`bdr.global_lock_statement_timeout`](pgd-settings#bdrglobal_lock_statement_timeout)
 * [`bdr.global_lock_idle_timeout`](pgd-settings#bdrglobal_lock_idle_timeout)
 * [`bdr.lock_table_locking`](pgd-settings#bdrlock_table_locking)
 * [`bdr.predictive_checks`](pgd-settings#bdrpredictive_checks)
### [Node management](pgd-settings#node-management)
 * [`bdr.replay_progress_frequency`](pgd-settings#bdrreplay_progress_frequency)
### [Generic replication](pgd-settings#generic-replication)
 * [`bdr.writers_per_subscription`](pgd-settings#bdrwriters_per_subscription)
 * [`bdr.max_writers_per_subscription`](pgd-settings#bdrmax_writers_per_subscription)
 * [`bdr.xact_replication`](pgd-settings#bdrxact_replication)
 * [`bdr.permit_unsafe_commands`](pgd-settings#bdrpermit_unsafe_commands)
 * [`bdr.batch_inserts`](pgd-settings#bdrbatch_inserts)
 * [`bdr.maximum_clock_skew`](pgd-settings#bdrmaximum_clock_skew)
 * [`bdr.maximum_clock_skew_action`](pgd-settings#bdrmaximum_clock_skew_action)
 * [`bdr.accept_connections`](pgd-settings#bdraccept_connections)
 * [`bdr.writer_input_queue_size`](pgd-settings#bdrwriter_input_queue_size)
 * [`bdr.writer_output_queue_size`](pgd-settings#bdrwriter_output_queue_size)
 * [`bdr.min_worker_backoff_delay`](pgd-settings#bdrmin_worker_backoff_delay)
### [CRDTs](pgd-settings#crdts)
 * [`bdr.crdt_raw_value`](pgd-settings#bdrcrdt_raw_value)
### [Large objects](pgd-settings#large-objects)
 * [`bdr.override_large_objects`](pgd-settings#bdroverride_large_objects)
### [Commit scope](pgd-settings#commit-scope)
 * [`bdr.commit_scope`](pgd-settings#bdrcommit_scope)
### [Commit At Most Once](pgd-settings#commit-at-most-once)
 * [`bdr.camo_local_mode_delay`](pgd-settings#bdrcamo_local_mode_delay)
 * [`bdr.camo_enable_client_warnings`](pgd-settings#bdrcamo_enable_client_warnings)
### [Transaction streaming](pgd-settings#transaction-streaming)
 * [`bdr.default_streaming_mode`](pgd-settings#bdrdefault_streaming_mode)
### [Lag Control](pgd-settings#lag-control)
 * [`bdr.lag_control_min_conforming_nodes`](pgd-settings#bdrlag_control_min_conforming_nodes)
 * [`bdr.lag_control_commit_delay_adjust`](pgd-settings#bdrlag_control_commit_delay_adjust)
 * [`bdr.lag_control_sample_interval`](pgd-settings#bdrlag_control_sample_interval)
 * [`bdr.lag_control_commit_delay_start`](pgd-settings#bdrlag_control_commit_delay_start)
### [Monitoring and logging](pgd-settings#monitoring-and-logging)
 * [`bdr.debug_level`](pgd-settings#bdrdebug_level)
 * [`bdr.trace_level`](pgd-settings#bdrtrace_level)
 * [`bdr.track_subscription_apply`](pgd-settings#bdrtrack_subscription_apply)
 * [`bdr.track_relation_apply`](pgd-settings#bdrtrack_relation_apply)
 * [`bdr.track_apply_lock_timing`](pgd-settings#bdrtrack_apply_lock_timing)
 * [`bdr.monitor_enabled`](pgd-settings#bdrmonitor_enabled)
 * [`bdr.monitor_prometheus_pg_metrics`](pgd-settings#bdrmonitor_prometheus_pg_metrics)
 * [`bdr.monitor_ssl_cert_file`](pgd-settings#bdrmonitor_ssl_cert_file)
 * [`bdr.monitor_ssl_key_file`](pgd-settings#bdrmonitor_ssl_key_file)
 * [`bdr.monitor_ssl_ca_file`](pgd-settings#bdrmonitor_ssl_ca_file)
### [Decoding worker](pgd-settings#decoding-worker)
 * [`bdr.enable_wal_decoder`](pgd-settings#bdrenable_wal_decoder)
 * [`bdr.receive_lcr`](pgd-settings#bdrreceive_lcr)
 * [`bdr.lcr_cleanup_interval`](pgd-settings#bdrlcr_cleanup_interval)
### [Connectivity settings](pgd-settings#connectivity-settings)
 * [`bdr.global_connection_timeout`](pgd-settings#bdrglobal_connection_timeout)
 * [`bdr.global_keepalives`](pgd-settings#bdrglobal_keepalives)
 * [`bdr.global_keepalives_idle`](pgd-settings#bdrglobal_keepalives_idle)
 * [`bdr.global_keepalives_interval`](pgd-settings#bdrglobal_keepalives_interval)
 * [`bdr.global_keepalives_count`](pgd-settings#bdrglobal_keepalives_count)
 * [`bdr.global_tcp_user_timeout`](pgd-settings#bdrglobal_tcp_user_timeout)
### [Connection Manager](pgd-settings#connection-manager)
 * [`bdr.conn_mgr_server_max_lifetime`](pgd-settings#bdrconn_mgr_server_max_lifetime)
 * [`bdr.conn_mgr_worker_threads`](pgd-settings#bdrconn_mgr_worker_threads)
### [Topology settings](pgd-settings#topology-settings)
 * [`bdr.force_full_mesh`](pgd-settings#bdrforce_full_mesh)
### [Analytics settings](pgd-settings#analytics-settings)
 * [`bdr.prefer_analytics_engine`](pgd-settings#bdrprefer_analytics_engine)
### [Internal settings - Raft timeouts](pgd-settings#internal-settings---raft-timeouts)
 * [`bdr.raft_global_election_timeout`](pgd-settings#bdrraft_global_election_timeout)
 * [`bdr.raft_group_election_timeout`](pgd-settings#bdrraft_group_election_timeout)
 * [`bdr.raft_response_timeout`](pgd-settings#bdrraft_response_timeout)
### [Internal settings - Other Raft values](pgd-settings#internal-settings---other-raft-values)
 * [`bdr.raft_keep_min_entries`](pgd-settings#bdrraft_keep_min_entries)
 * [`bdr.raft_log_min_apply_duration`](pgd-settings#bdrraft_log_min_apply_duration)
 * [`bdr.raft_log_min_message_duration`](pgd-settings#bdrraft_log_min_message_duration)
 * [`bdr.raft_group_max_connections`](pgd-settings#bdrraft_group_max_connections)
 * [`bdr.raft_vacuum_interval`](pgd-settings#bdrraft_vacuum_interval)
 * [`bdr.raft_vacuum_full_interval`](pgd-settings#bdrraft_vacuum_full_interval)
 * [`bdr.raft_catalog_read_consistency`](pgd-settings#bdrraft_catalog_read_consistency)
### [Internal settings - Other values](pgd-settings#internal-settings---other-values)
 * [`bdr.backwards_compatibility`](pgd-settings#bdrbackwards_compatibility)
 * [`bdr.track_replication_estimates`](pgd-settings#bdrtrack_replication_estimates)
 * [`bdr.lag_tracker_apply_rate_weight`](pgd-settings#bdrlag_tracker_apply_rate_weight)
 * [`bdr.enable_auto_sync_reconcile`](pgd-settings#bdrenable_auto_sync_reconcile)
 * [`bdr.allow_bdr_schema_changes`](pgd-settings#bdrallow_bdr_schema_changes)
 * [`bdr.taskmgr_nap_time`](pgd-settings#bdrtaskmgr_nap_time)
 * [`bdr.cds_memory_cache_size`](pgd-settings#bdrcds_memory_cache_size)
 * [`bdr.commit_decision_min_age`](pgd-settings#bdrcommit_decision_min_age)
 * [`bdr.prev_leader_wait_timeout`](pgd-settings#bdrprev_leader_wait_timeout)
 * [`bdr.slot_checkpoint_interval`](pgd-settings#bdrslot_checkpoint_interval)
 * [`bdr.ddl_queue_retention_period`](pgd-settings#bdrddl_queue_retention_period)
 * [`bdr.temp_directory`](pgd-settings#bdrtemp_directory)
 * [`bdr.shuffle_scheduled_tasks`](pgd-settings#bdrshuffle_scheduled_tasks)


## [Node management](nodes)
 * [List of node states](nodes#list-of-node-states)
 * [Node-management commands](nodes#node-management-commands)
   * [`bdr_init_physical`](nodes#bdr_init_physical)
   * [`bdr_config`](nodes#bdr_config)


## [Node management interfaces](nodes-management-interfaces)
 * [`bdr.alter_node_group_option`](nodes-management-interfaces#bdralter_node_group_option)
 * [`bdr.alter_node_interface`](nodes-management-interfaces#bdralter_node_interface)
 * [`bdr.alter_node_option`](nodes-management-interfaces#bdralter_node_option)
 * [`bdr.alter_subscription_enable`](nodes-management-interfaces#bdralter_subscription_enable)
 * [`bdr.alter_subscription_disable`](nodes-management-interfaces#bdralter_subscription_disable)
 * [`bdr.create_node`](nodes-management-interfaces#bdrcreate_node)
 * [`bdr.create_node_group`](nodes-management-interfaces#bdrcreate_node_group)
 * [`bdr.drop_node_group`](nodes-management-interfaces#bdrdrop_node_group)
 * [`bdr.join_node_group`](nodes-management-interfaces#bdrjoin_node_group)
 * [`bdr.part_node`](nodes-management-interfaces#bdrpart_node)
 * [`bdr.promote_node`](nodes-management-interfaces#bdrpromote_node)
 * [`bdr.switch_node_group`](nodes-management-interfaces#bdrswitch_node_group)
 * [`bdr.sync_node_cancel`](nodes-management-interfaces#bdrsync_node_cancel)
 * [`bdr.wait_for_join_completion`](nodes-management-interfaces#bdrwait_for_join_completion)


## [Routing functions](routing)


## [Commit scopes](commit-scopes)
 * [Commit scope syntax](commit-scopes#commit-scope-syntax)
   * [commit_scope_degrade_operation](commit-scopes#commit_scope_degrade_operation)
 * [Commit scope targets](commit-scopes#commit-scope-targets)
   * [ORIGIN_GROUP](commit-scopes#origin_group)
 * [Commit scope groups](commit-scopes#commit-scope-groups)
   * [ANY](commit-scopes#any)
   * [ANY NOT](commit-scopes#any-not)
   * [MAJORITY](commit-scopes#majority)
   * [MAJORITY NOT](commit-scopes#majority-not)
   * [ALL](commit-scopes#all)
   * [ALL NOT](commit-scopes#all-not)
 * [Confirmation level](commit-scopes#confirmation-level)
   * [ON received](commit-scopes#on-received)
   * [ON replicated](commit-scopes#on-replicated)
   * [ON durable](commit-scopes#on-durable)
   * [ON visible](commit-scopes#on-visible)
 * [Commit Scope kinds](commit-scopes#commit-scope-kinds)
 * [SYNCHRONOUS COMMIT](commit-scopes#synchronous-commit)
   * [DEGRADE ON parameters](commit-scopes#degrade-on-parameters)
   * [commit_scope_degrade_operation](commit-scopes#commit_scope_degrade_operation)
 * [QUORUM COMMIT](commit-scopes#quorum-commit)
   * [QUORUM COMMIT parameters](commit-scopes#quorum-commit-parameters)
   * [QUORUM COMMIT ABORT ON parameters](commit-scopes#quorum-commit-abort-on-parameters)
   * [commit_decision settings](commit-scopes#commit_decision-settings)
 * [CAMO](commit-scopes#camo)
   * [DEGRADE ON parameters](commit-scopes#degrade-on-parameters)
 * [LAG CONTROL](commit-scopes#lag-control)
   * [LAG CONTROL parameters](commit-scopes#lag-control-parameters)
 * [GROUP COMMIT](commit-scopes#group-commit)
   * [GROUP COMMIT parameters](commit-scopes#group-commit-parameters)
   * [ABORT ON parameters](commit-scopes#abort-on-parameters)
   * [DEGRADE ON parameters](commit-scopes#degrade-on-parameters)
   * [transaction_tracking settings](commit-scopes#transaction_tracking-settings)
   * [conflict_resolution settings](commit-scopes#conflict_resolution-settings)
   * [GROUP COMMIT commit_decision settings](commit-scopes#group-commit-commit_decision-settings)
   * [commit_scope_degrade_operation settings](commit-scopes#commit_scope_degrade_operation-settings)


## [Conflicts](conflicts)
 * [Conflict detection](conflicts#conflict-detection)
   * [List of conflict types](conflicts#list-of-conflict-types)
 * [Conflict resolution](conflicts#conflict-resolution)
   * [List of conflict resolvers](conflicts#list-of-conflict-resolvers)
   * [Default conflict resolvers](conflicts#default-conflict-resolvers)
   * [List of conflict resolutions](conflicts#list-of-conflict-resolutions)
 * [Conflict logging](conflicts#conflict-logging)


## [Conflict functions](conflict_functions)
 * [`bdr.alter_table_conflict_detection`](conflict_functions#bdralter_table_conflict_detection)
 * [`bdr.alter_node_set_conflict_resolver`](conflict_functions#bdralter_node_set_conflict_resolver)
 * [`bdr.alter_node_set_log_config`](conflict_functions#bdralter_node_set_log_config)


## [Replication set management](repsets-management)
 * [`bdr.create_replication_set`](repsets-management#bdrcreate_replication_set)
 * [`bdr.alter_replication_set`](repsets-management#bdralter_replication_set)
 * [`bdr.drop_replication_set`](repsets-management#bdrdrop_replication_set)
 * [`bdr.alter_node_replication_sets`](repsets-management#bdralter_node_replication_sets)


## [Replication set membership](repsets-membership)
 * [`bdr.replication_set_add_table`](repsets-membership#bdrreplication_set_add_table)
 * [`bdr.replication_set_remove_table`](repsets-membership#bdrreplication_set_remove_table)


## [DDL replication filtering](repsets-ddl-filtering)
 * [`bdr.replication_set_add_ddl_filter`](repsets-ddl-filtering#bdrreplication_set_add_ddl_filter)
 * [`bdr.replication_set_remove_ddl_filter`](repsets-ddl-filtering#bdrreplication_set_remove_ddl_filter)


## [Testing and tuning commands](testingandtuning)
 * [`pgd_bench`](testingandtuning#pgd_bench)


## [Global sequence management interfaces](sequences)
### [Sequence functions](sequences#sequence-functions)
 * [`bdr.alter_sequence_set_kind`](sequences#bdralter_sequence_set_kind)
 * [`bdr.extract_timestamp_from_snowflakeid`](sequences#bdrextract_timestamp_from_snowflakeid)
 * [`bdr.extract_nodeid_from_snowflakeid`](sequences#bdrextract_nodeid_from_snowflakeid)
 * [`bdr.extract_localseqid_from_snowflakeid`](sequences#bdrextract_localseqid_from_snowflakeid)
 * [`bdr.timestamp_to_snowflakeid`](sequences#bdrtimestamp_to_snowflakeid)
 * [`bdr.extract_timestamp_from_timeshard`](sequences#bdrextract_timestamp_from_timeshard)
 * [`bdr.extract_nodeid_from_timeshard`](sequences#bdrextract_nodeid_from_timeshard)
 * [`bdr.extract_localseqid_from_timeshard`](sequences#bdrextract_localseqid_from_timeshard)
 * [`bdr.timestamp_to_timeshard`](sequences#bdrtimestamp_to_timeshard)
 * [`bdr.galloc_chunk_info`](sequences#bdrgalloc_chunk_info)
### [KSUUID v2 functions](sequences#ksuuid-v2-functions)
 * [`bdr.gen_ksuuid_v2`](sequences#bdrgen_ksuuid_v2)
 * [`bdr.ksuuid_v2_cmp`](sequences#bdrksuuid_v2_cmp)
 * [`bdr.extract_timestamp_from_ksuuid_v2`](sequences#bdrextract_timestamp_from_ksuuid_v2)
### [KSUUID v1 functions](sequences#ksuuid-v1-functions)
 * [`bdr.gen_ksuuid`](sequences#bdrgen_ksuuid)
 * [`bdr.uuid_v1_cmp`](sequences#bdruuid_v1_cmp)
 * [`bdr.extract_timestamp_from_ksuuid`](sequences#bdrextract_timestamp_from_ksuuid)


## [Large object functions](large-objects)
### [Large object interface](large-objects#large-object-interface)
 * [`bdr.lo_creat`](large-objects#bdrlo_creat)
 * [`bdr.lo_create`](large-objects#bdrlo_create)
 * [`bdr.lo_open`](large-objects#bdrlo_open)
 * [`bdr.lo_close`](large-objects#bdrlo_close)
 * [`bdr.loread`](large-objects#bdrloread)
 * [`bdr.lowrite`](large-objects#bdrlowrite)
 * [`bdr.lo_lseek`](large-objects#bdrlo_lseek)
 * [`bdr.lo_lseek64`](large-objects#bdrlo_lseek64)
 * [`bdr.lo_tell`](large-objects#bdrlo_tell)
 * [`bdr.lo_tell64`](large-objects#bdrlo_tell64)
 * [`bdr.lo_truncate`](large-objects#bdrlo_truncate)
 * [`bdr.lo_truncate64`](large-objects#bdrlo_truncate64)
 * [`bdr.lo_unlink`](large-objects#bdrlo_unlink)
 * [`bdr.lo_import`](large-objects#bdrlo_import)
 * [`bdr.lo_import_with_oid`](large-objects#bdrlo_import_with_oid)
 * [`bdr.lo_export`](large-objects#bdrlo_export)
 * [`bdr.lo_get`](large-objects#bdrlo_get)
 * [`bdr.lo_get_fragment`](large-objects#bdrlo_get_fragment)
 * [`bdr.lo_from_bytea`](large-objects#bdrlo_from_bytea)
 * [`bdr.lo_put`](large-objects#bdrlo_put)


## [AutoPartition](autopartition)
 * [`bdr.autopartition`](autopartition#bdrautopartition)
 * [`bdr.drop_autopartition`](autopartition#bdrdrop_autopartition)
 * [`bdr.autopartition_wait_for_partitions`](autopartition#bdrautopartition_wait_for_partitions)
 * [`bdr.autopartition_wait_for_partitions_on_all_nodes`](autopartition#bdrautopartition_wait_for_partitions_on_all_nodes)
 * [`bdr.autopartition_find_partition`](autopartition#bdrautopartition_find_partition)
 * [`bdr.autopartition_enable`](autopartition#bdrautopartition_enable)
 * [`bdr.autopartition_disable`](autopartition#bdrautopartition_disable)
 * [Internal functions](autopartition#internal-functions)
 * [`bdr.autopartition_create_partition`](autopartition#bdrautopartition_create_partition)
 * [`bdr.autopartition_drop_partition`](autopartition#bdrautopartition_drop_partition)
## Stream triggers reference


## [Stream triggers manipulation interfaces](streamtriggers/interfaces)
 * [`bdr.create_conflict_trigger`](streamtriggers/interfaces#bdrcreate_conflict_trigger)
 * [`bdr.create_transform_trigger`](streamtriggers/interfaces#bdrcreate_transform_trigger)
 * [`bdr.drop_trigger`](streamtriggers/interfaces#bdrdrop_trigger)


## [Stream triggers row functions](streamtriggers/rowfunctions)
 * [`bdr.trigger_get_row`](streamtriggers/rowfunctions#bdrtrigger_get_row)
 * [`bdr.trigger_get_committs`](streamtriggers/rowfunctions#bdrtrigger_get_committs)
 * [`bdr.trigger_get_xid`](streamtriggers/rowfunctions#bdrtrigger_get_xid)
 * [`bdr.trigger_get_type`](streamtriggers/rowfunctions#bdrtrigger_get_type)
 * [`bdr.trigger_get_conflict_type`](streamtriggers/rowfunctions#bdrtrigger_get_conflict_type)
 * [`bdr.trigger_get_origin_node_id`](streamtriggers/rowfunctions#bdrtrigger_get_origin_node_id)
 * [`bdr.ri_fkey_on_del_trigger`](streamtriggers/rowfunctions#bdrri_fkey_on_del_trigger)


## [Stream triggers row variables](streamtriggers/rowvariables)
 * [`TG_NAME`](streamtriggers/rowvariables#tg_name)
 * [`TG_WHEN`](streamtriggers/rowvariables#tg_when)
 * [`TG_LEVEL`](streamtriggers/rowvariables#tg_level)
 * [`TG_OP`](streamtriggers/rowvariables#tg_op)
 * [`TG_RELID`](streamtriggers/rowvariables#tg_relid)
 * [`TG_TABLE_NAME`](streamtriggers/rowvariables#tg_table_name)
 * [`TG_TABLE_SCHEMA`](streamtriggers/rowvariables#tg_table_schema)
 * [`TG_NARGS`](streamtriggers/rowvariables#tg_nargs)
 * [`TG_ARGV[]`](streamtriggers/rowvariables#tg_argv)


## [Internal catalogs and views](catalogs-internal)
 * [`bdr.autopartition_partitions`](catalogs-internal#bdrautopartition_partitions)
 * [`bdr.autopartition_rules`](catalogs-internal#bdrautopartition_rules)
 * [`bdr.ddl_epoch`](catalogs-internal#bdrddl_epoch)
 * [`bdr.event_history`](catalogs-internal#bdrevent_history)
 * [`bdr.event_summary`](catalogs-internal#bdrevent_summary)
 * [`bdr.leader_tenure_backlog`](catalogs-internal#bdrleader_tenure_backlog)
 * [`bdr.local_leader_change`](catalogs-internal#bdrlocal_leader_change)
 * [`bdr.node_config`](catalogs-internal#bdrnode_config)
 * [`bdr.node_config_summary`](catalogs-internal#bdrnode_config_summary)
 * [`bdr.node_group_config`](catalogs-internal#bdrnode_group_config)
 * [`bdr.node_group_routing_config_summary`](catalogs-internal#bdrnode_group_routing_config_summary)
 * [`bdr.node_group_routing_info`](catalogs-internal#bdrnode_group_routing_info)
 * [`bdr.node_group_routing_summary`](catalogs-internal#bdrnode_group_routing_summary)
 * [`bdr.node_peer_progress_mapping`](catalogs-internal#bdrnode_peer_progress_mapping)
 * [`bdr.node_routing_config_summary`](catalogs-internal#bdrnode_routing_config_summary)
 * [`bdr.prepared_xacts_summary`](catalogs-internal#bdrprepared_xacts_summary)
 * [`bdr.reconcile_2pc_requests`](catalogs-internal#bdrreconcile_2pc_requests)
 * [`bdr.reconcile_2pc_requests_summary`](catalogs-internal#bdrreconcile_2pc_requests_summary)
 * [`bdr.sequence_kind`](catalogs-internal#bdrsequence_kind)
 * [`bdr.sync_node_requests`](catalogs-internal#bdrsync_node_requests)
 * [`bdr.sync_node_requests_summary`](catalogs-internal#bdrsync_node_requests_summary)


## [Internal system functions](functions-internal)
### [General internal functions](functions-internal#general-internal-functions)
 * [`bdr.bdr_get_commit_decisions`](functions-internal#bdrbdr_get_commit_decisions)
 * [`bdr.bdr_track_commit_decision`](functions-internal#bdrbdr_track_commit_decision)
 * [`bdr.consensus_kv_fetch`](functions-internal#bdrconsensus_kv_fetch)
 * [`bdr.consensus_kv_store`](functions-internal#bdrconsensus_kv_store)
 * [`bdr.decode_message_payload`](functions-internal#bdrdecode_message_payload)
 * [`bdr.decode_message_response_payload`](functions-internal#bdrdecode_message_response_payload)
 * [`bdr.difference_fix_origin_create`](functions-internal#bdrdifference_fix_origin_create)
 * [`bdr.difference_fix_session_reset`](functions-internal#bdrdifference_fix_session_reset)
 * [`bdr.difference_fix_session_setup`](functions-internal#bdrdifference_fix_session_setup)
 * [`bdr.difference_fix_xact_set_avoid_conflict`](functions-internal#bdrdifference_fix_xact_set_avoid_conflict)
 * [`bdr.drop_node`](functions-internal#bdrdrop_node)
 * [`bdr.get_global_locks`](functions-internal#bdrget_global_locks)
 * [`bdr.get_node_conflict_resolvers`](functions-internal#bdrget_node_conflict_resolvers)
 * [`bdr.get_slot_flush_timestamp`](functions-internal#bdrget_slot_flush_timestamp)
 * [`bdr.internal_alter_sequence_set_kind`](functions-internal#bdrinternal_alter_sequence_set_kind)
 * [`bdr.internal_replication_set_add_table`](functions-internal#bdrinternal_replication_set_add_table)
 * [`bdr.internal_replication_set_remove_table`](functions-internal#bdrinternal_replication_set_remove_table)
 * [`bdr.internal_submit_join_request`](functions-internal#bdrinternal_submit_join_request)
 * [`bdr.isolation_test_session_is_blocked`](functions-internal#bdrisolation_test_session_is_blocked)
 * [`bdr.local_node_info`](functions-internal#bdrlocal_node_info)
 * [`bdr.msgb_connect`](functions-internal#bdrmsgb_connect)
 * [`bdr.msgb_deliver_message`](functions-internal#bdrmsgb_deliver_message)
 * [`bdr.node_catchup_state_name`](functions-internal#bdrnode_catchup_state_name)
 * [`bdr.node_kind_name`](functions-internal#bdrnode_kind_name)
 * [`bdr.peer_state_name`](functions-internal#bdrpeer_state_name)
 * [`bdr.pg_xact_origin`](functions-internal#bdrpg_xact_origin)
 * [`bdr.reconcile_2pc_status_name`](functions-internal#bdrreconcile_2pc_status_name)
 * [`bdr.request_replay_progress_update`](functions-internal#bdrrequest_replay_progress_update)
 * [`bdr.reset_relation_stats`](functions-internal#bdrreset_relation_stats)
 * [`bdr.reset_subscription_stats`](functions-internal#bdrreset_subscription_stats)
 * [`bdr.resynchronize_table_from_node`](functions-internal#bdrresynchronize_table_from_node)
 * [`bdr.seq_currval`](functions-internal#bdrseq_currval)
 * [`bdr.seq_lastval`](functions-internal#bdrseq_lastval)
 * [`bdr.seq_nextval`](functions-internal#bdrseq_nextval)
 * [`bdr.show_subscription_status`](functions-internal#bdrshow_subscription_status)
 * [`bdr.show_workers`](functions-internal#bdrshow_workers)
 * [`bdr.show_writers`](functions-internal#bdrshow_writers)
 * [`bdr.sync_status_name`](functions-internal#bdrsync_status_name)
### [Task manager functions](functions-internal#task-manager-functions)
 * [`bdr.taskmgr_set_leader`](functions-internal#bdrtaskmgr_set_leader)
 * [`bdr.taskmgr_get_last_completed_workitem`](functions-internal#bdrtaskmgr_get_last_completed_workitem)
 * [`bdr.taskmgr_work_queue_check_status`](functions-internal#bdrtaskmgr_work_queue_check_status)
 * [`bdr.get_min_required_replication_slots`](functions-internal#bdrget_min_required_replication_slots)
 * [`bdr.get_min_required_active_replication_origins`](functions-internal#bdrget_min_required_active_replication_origins)
 * [`bdr.get_min_required_worker_processes`](functions-internal#bdrget_min_required_worker_processes)
 * [`bdr.stat_last_reset_time`](functions-internal#bdrstat_last_reset_time)
 * [`bdr.stat_get_activity`](functions-internal#bdrstat_get_activity)
 * [`bdr.stat_get_commit_scope`](functions-internal#bdrstat_get_commit_scope)
 * [`bdr.stat_get_commit_scope_proc_wait`](functions-internal#bdrstat_get_commit_scope_proc_wait)
 * [`bdr.stat_get_reconcile_commit_scope`](functions-internal#bdrstat_get_reconcile_commit_scope)
 * [`bdr.worker_role_id_name`](functions-internal#bdrworker_role_id_name)
 * [`bdr.lag_history`](functions-internal#bdrlag_history)
 * [`bdr.get_raft_instance_by_nodegroup`](functions-internal#bdrget_raft_instance_by_nodegroup)
 * [`bdr.monitor_camo_on_all_nodes`](functions-internal#bdrmonitor_camo_on_all_nodes)
 * [`bdr.monitor_raft_details_on_all_nodes`](functions-internal#bdrmonitor_raft_details_on_all_nodes)
 * [`bdr.monitor_replslots_details_on_all_nodes`](functions-internal#bdrmonitor_replslots_details_on_all_nodes)
 * [`bdr.monitor_subscription_details_on_all_nodes`](functions-internal#bdrmonitor_subscription_details_on_all_nodes)
 * [`bdr.monitor_version_details_on_all_nodes`](functions-internal#bdrmonitor_version_details_on_all_nodes)
 * [`bdr.node_group_member_info`](functions-internal#bdrnode_group_member_info)


## [Conflict functions](conflict_functions)
 * [`bdr.alter_table_conflict_detection`](conflict_functions#bdralter_table_conflict_detection)
 * [`bdr.alter_node_set_conflict_resolver`](conflict_functions#bdralter_node_set_conflict_resolver)
 * [`bdr.alter_node_set_log_config`](conflict_functions#bdralter_node_set_log_config)


## [Column-level conflict functions](clcd)
 * [`bdr.column_timestamps_create`](clcd#bdrcolumn_timestamps_create)


## [Conflicts](conflicts)
 * [Conflict detection](conflicts#conflict-detection)
   * [List of conflict types](conflicts#list-of-conflict-types)
 * [Conflict resolution](conflicts#conflict-resolution)
   * [List of conflict resolvers](conflicts#list-of-conflict-resolvers)
   * [Default conflict resolvers](conflicts#default-conflict-resolvers)
   * [List of conflict resolutions](conflicts#list-of-conflict-resolutions)
 * [Conflict logging](conflicts#conflict-logging)
